<resources>
    <string name="app_name">MAAMTA LW TRIAL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_8_oral_folic_acid">8. Oral folic acid</string>
    <string name="norespones">NO RESPONES</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="dk">DON`T KNOW</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="both">BOTh</string>
    <string name="unnecessary">Unnecessary</string>
    <string name="crf2_q45_english">Explain all trial procedures</string>
    <string name="crf2_q45_urdu">Trial ka tareeqa samjha diya gaya ha</string>
    <string name="crf2_q46_english">Informed consent administered and explained in local language</string>
    <string name="crf2_q46_urdu">Ijazat mana lay liya gaya ha LW sa us k apni zeban ma</string>
    <string name="crf2_q47_english">LW has given her consent to participate in the study?</string>
    <string name="crf2_q47_urdu">LW razamand ha k wo trial ma hissa lay gee</string>
    <string name="crf2_q48_english">LW has agreed to give specimens for LW and infant?</string>
    <string name="crf2_q48_urdu">LW razamand ha k wo apna and apnay bachay ka namoonay bh day gee</string>
    <string name="crf2_q49_english">LW has signed/given the thumb impression</string>
    <string name="crf2_q49_urdu">LW na ijazat namay par dastakhat ya anghootay ka nishan bh day diya ha</string>
    <string name="crf2_q50_english">Reconfirm from the LW that she understands all the procedures</string>
    <string name="crf2_q50_urdu">LW sa aik dafa phir pochain k kya us ko trial ka tareeqa qar achi tarhan samaj a gaya ha</string>
    <string name="crf4a_q20_english">Is LW alive?</string>
    <string name="crf4a_q20_roman_urdu">LW zinda ha</string>
    <string name="crf4a_q21_english">Date of death</string>
    <string name="crf4a_q21_roman_urdu">Agar LW ka intiqaal ho gaya tu us k tareekh</string>
    <string name="crf4a_q22_english">Time of death</string>
    <string name="crf4a_q22_roman_urdu">Intiqaal ka waqt</string>
    <string name="crf4a_q23_english">Is baby alive?</string>
    <string name="crf4a_q23_roman_urdu">Bacha zinda ha</string>
    <string name="crf4a_q24_english">Date of death</string>
    <string name="crf4a_q24_roman_urdu">Agar bachay ka intiqaal ho gaya tu us k tareekh</string>
    <string name="crf4a_q25_english">Time of death</string>
    <string name="crf4a_q25_roman_urdu">Intiqaal ka waqt</string>
    <string name="crf4a_q26_english">Age of the baby on day of visit System generated</string>
    <string name="crf4a_q26_roman_urdu">Jis din visit k ha bachay ko us din bachay k umer dinoun ma Yeh system khud fill karay ga</string>
    <string name="crf4a_q27_b">Did you give anything to drink or eat during this hour to the baby?</string>
    <string name="crf4a_q27_b_roman_urdu">Kya is ganty k doran apny bachay ko kuch peene ya khanay ko dia?</string>
    <string name="crf4a_q33_english">Total time duration, the baby was breastfed at this specific time</string>
    <string name="crf4a_q33_roman_urdu">Muqarar waqt pay bachay na kitni dair k dhood peeya</string>
    <string name="crf4a_q34_english">Type of spoon used</string>
    <string name="crf4a_q34_roman_urdu">Agar bachay ko chamchay sa dhood diya ha tu wo kon sa tha</string>
    <string name="crf4a_q34_option_1">Tea spoon (Chai wala chamcha)</string>
    <string name="crf4a_q34_option_2">Tablespoon (Chawal khanay wala chamcha)</string>
    <string name="crf4a_q34_option_3">Cotton piece (Roi ka tukray sa)</string>
    <string name="crf4a_q34_option_4">Dropper (Qatray peelnay walay sa)</string>
    <string name="crf4a_q35_english">How much amount is given (Approximate)</string>
    <string name="crf4a_q35_roman_urdu">Kitni miqdar ma dhood diya</string>
    <string name="crf4a_q36_english">Did the enrolled baby vomit immediately (Half an hour) after feeding?</string>
    <string name="crf4a_q36_roman_urdu">Kya bachay ko ulti tu nahi hoi dhood pilanay k foran baad</string>
    <string name="crf4a_q37_english">How much feed did the baby vomit?</string>
    <string name="crf4a_q37_roman_urdu">Agar bachay ko ulti hoi tu kitni dair baad hoi dhood pilanay k baad</string>
    <string name="crf4a_q37_option_1">All of the feed</string>
    <string name="crf4a_q37_option_3">Small amount</string>
    <string name="crf4a_q37_option_2">Half of the feed</string>
    <string name="crf4a_q38_english">Was there any other baby (specifically ask for other siblings or children at home) who was breastfed by this enrolled LW during this specific hour? There is a chance that mother is also breastfeeding her other under-five children or other kids at home.(DO NOT INCLUDE AN ENROLLED BABY)</string>
    <string name="crf4a_q38_roman_urdu">Kya is bachay k saaath saath maa na kisi aur ko bh dhood pilaya ha jis k umer 5 saal sa kaam ho, yeh us maa and bachay k liya ha jo hamari study ma enrolled han</string>
    <string name="crf4a_q39_english">Number of children who were breastfed by the enrolled LW at this specific hour (DO NOT INCLUDE AN ENROLLED BABY)</string>
    <string name="crf4a_q39_roman_urdu">LW na kitnay bachoun ko dhood pilaya ha pichaly 1 ghantay ma</string>
    <string name="crf4a_q40_english">During this specific hour, was baby given anything which was cooked at home (A recipe) For example , Soji ka Halwa, Sagoo danay Ke Kheer, EXCEPT breast milk? If same thing give more than two times, count it a one.</string>
    <string name="crf4a_q40_roman_urdu">Is khas ghantay main, kiya bachay ko ghar pe kuch paka k khanay ya peenay k liye diya giya. Jaisay k: Soji ka Halwa, Sagoo danay Ke Kheer. Ager aik he cheez aik khas ghantay main aik se ziyda baar degaye hai, to usko aik ke baar ginti man laayen.</string>
    <string name="crf4a_q41_english">Where this recipe was made or cooked?</string>
    <string name="crf4a_q41_roman_urdu">Bachay ko khilay Janay wali cheez kahan tayar k gay th</string>
    <string name="crf4a_q41_option_1">Own home (apna ghar ma)</string>
    <string name="crf4a_q41_option_2">Somewhere else (ya Kahin aur)</string>
    <string name="crf4a_q42_english">Recipe name/description which was given to a baby during this specific hour?</string>
    <string name="crf4a_q42_roman_urdu">Us cheez ka naam jo paka k dee gaye</string>
    <string name="crf4a_q43_english">Code of the recipe used</string>
    <string name="crf4a_q43_roman_urdu">Uss cheez ka code jo paka k dee gaye</string>
    <string name="crf4a_q44_english">Portion size description</string>
    <string name="crf4a_q44_roman_urdu">Kis cheez se wo cheez khilaye ya pilaaye gaye</string>
    <string name="crf4a_q45_english">Amount used in gram</string>
    <string name="crf4a_q45_roman_urdu">Kitni Mikqaar main de gaye</string>
    <string name="crf4a_q46_english">During this specific hour, was baby given any other thing which was cooked at home (A recipe) For example , Soji ka Halwa, Sagoo danay Ke Kheer, EXCEPT breast milk? If same thing was given more than two times, count it a one. EXCEPT breast milk, which is different from Q42?There is a chance that mother gave the same thing more than once within this specific hour, count it as one and right cumulative quantity.</string>
    <string name="crf4a_q46_roman_urdu">Is khas ghantay main, kiya bachay ko ghar pe kuch paka k khanay ya peenay k liye diya giya. Jaisay k: Soji ka Halwa, Sagoo danay Ke Kheer. Ager aik he cheez aik khas ghantay main aik se ziyda baar degaye hai, to usko aik ke baar ginti man laayen. Jo ka Q42 se mukhtalif ho Aaisa mumkin hai k maan ne bachay ko kuch aur bhe paka k diya h Agar aik he cheez aik he ghantay mai aik se ziyada baar de gaye to jama karlain</string>
    <string name="crf4a_q47_english">Where this recipe was made or cooked?</string>
    <string name="crf4a_q47_roman_urdu">Bachay ko khilay Janay wali cheez kahan tayar k gay th</string>
    <string name="crf4a_q47_option_1">Own home (apna ghar ma)</string>
    <string name="crf4a_q47_option_2">Somewhere else(ya Kahin aur)</string>
    <string name="crf4a_q48_english">Recipe name/description which was given to a baby during this specific hour?</string>
    <string name="crf4a_q48_roman_urdu">Us cheez ka naam jo paka k dee gaye</string>
    <string name="crf4a_q49_english">Code of the recipe used (Use codes from the manual)</string>
    <string name="crf4a_q49_roman_urdu">Uss cheez ka code jo paka k dee gaye(code manual s istmal kare)</string>
    <string name="crf4a_q50_english">Portion size description (Use terms as per manual. Like bottle, ml teaspoon, tablespoon etc)</string>
    <string name="crf4a_q50_roman_urdu">Kis cheez se wo cheez khilaye ya pilaaye gaye (jo manual m terms h wo user kare. Jese k bottle, teaspoon, tablespoon etc)</string>
    <string name="crf4a_q51_english">Amount used in gram</string>
    <string name="crf4a_q51_roman_urdu">Kitni Mikqaar main de gaye grams m likhy</string>
    <string name="crf4a_q52_english">During this specific hour, was baby given any other thing which was cooked at home (A recipe) For example , Soji ka Halwa, Sagoo danay Ke Kheer, EXCEPT breast milk? If same thing was given more than two times, count it a one. EXCEPT breast milk, which is different from Q42 and Q48? There is a chance that mother gave the same thing more than once within this specific hour, count it as one and right cumulative quantity.</string>
    <string name="crf4a_q52_roman_urdu">Is khas ghantay main, kiya bachay ko ghar pe kuch paka k khanay ya peenay k liye diya giya. Jaisay k: Soji ka Halwa, Sagoo danay Ke Kheer. Ager aik he cheez aik khas ghantay main aik se ziyda baar degaye hai, to usko aik ke baar ginti man laayen. Jo ka Q42 aur 48 se mukhtalif ho Aaisa mumkin hai k maan ne bachay ko kuch aur bhe paka k diya ho Agar aik he cheez aik he ghantay mai aik se ziyada baar de gaye to jama karlain</string>
    <string name="crf4a_q53_english">Where this recipe was made or cooked?</string>
    <string name="crf4a_q53_roman_urdu">Bachay ko khilay Janay wali cheez kahan tayar k gay th</string>
    <string name="crf4a_q54_english">Recipe name/description which was given to a baby during this specific hour?</string>
    <string name="crf4a_q54_roman_urdu">Us cheez ka naam jo paka k dee gaye</string>
    <string name="crf4a_q55_english">Code of the recipe used</string>
    <string name="crf4a_q55_roman_urdu">Uss cheez ka code jo paka k dee gay</string>
    <string name="crf4a_q56_english">Portion size description</string>
    <string name="crf4a_q56_roman_urdu">Kis cheez se wo cheez khilaye ya pilaaye gaye</string>
    <string name="crf4a_q57_english">Amount used in gram</string>
    <string name="crf4a_q57_roman_urdu">Kitni Mikqaar main de gaye</string>
    <string name="crf4a_q58_english">Was a specific food item e.g. goat milk, juice, banana, biscuit, Fruit juice, Formula milk, Ceralac etc used? If same thing given more than once in an hour, count it as one</string>
    <string name="crf4a_q58_roman_urdu">Kiya is khas ghantay main bachay ko koi aisi cheez de gaye jis ko pakana na parta ho, jaisay k Bakri ka doodh, formula milk, Joose, Kaila, Biscuit, Ceralac WAGAIRA.Agar aik he cheez aik he ghantay mai aik se ziyada baar de gaye to jama karlain</string>
    <string name="crf4a_q59_english">Name of food item which was given to the baby during this specific hour?</string>
    <string name="crf4a_q59_roman_urdu">Uss khanay ke cheez ka naam</string>
    <string name="crf4a_q60_english">Code of food item used</string>
    <string name="crf4a_q60_roman_urdu">Us khanay ke cheez ka code</string>
    <string name="crf4a_q61_english">Portion size description</string>
    <string name="crf4a_q61_roman_urdu">Kis size ya cheez se de gaye</string>
    <string name="crf4a_q62_english">Amount used in gram</string>
    <string name="crf4a_q62_roman_urdu">Kitni miqdaar de gaye</string>
</resources>