<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrolView"
    android:layout_width="match_parent"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_height="match_parent"
    tools:context=".fragments.crf5b_fragment.Crf5bQ19Fragmnet">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        //q19
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf4a_q20_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf4a_q20_roman_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <RadioGroup
                android:id="@+id/rg_q19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6">

                <RadioButton
                    android:id="@+id/rb_q20_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rb_q20_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="@string/no"
                    android:textColor="@color/black" />

            </RadioGroup>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />


        //q20
        <LinearLayout
            android:id="@+id/ll_q20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf4a_q21_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf4a_q21_roman_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>


            <TextView
                android:id="@+id/tv_dod_lw"
                android:textSize="20sp"
                android:drawableLeft="@mipmap/calendar"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Date"
                />



        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />


        //q21
        <LinearLayout
            android:id="@+id/ll_q21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf4a_q22_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf4a_q22_roman_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>



            <TextView
                android:id="@+id/tv_tod_lw"
                android:textSize="20sp"
                android:drawableLeft="@mipmap/time"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Time"
                />



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />


        //q22
        <LinearLayout
            android:id="@+id/ll_q22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf4a_q23_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf4a_q23_roman_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <RadioGroup
                android:id="@+id/rg_q22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="1"
                    android:text="@string/yes"
                    android:textColor="@color/black" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="@string/no"
                    android:textColor="@color/black" />

            </RadioGroup>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />


        //q23
        <LinearLayout
            android:id="@+id/ll_q23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf4a_q24_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf4a_q24_roman_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>


            <TextView
                android:id="@+id/tv_dod_babay"
                android:textSize="20sp"
                android:drawableLeft="@mipmap/calendar"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Date"
                />



        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />


        //q24
        <LinearLayout
            android:id="@+id/ll_q24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf4a_q25_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf4a_q25_roman_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>



            <TextView
                android:id="@+id/tv_getTime_baby"
                android:textSize="20sp"
                android:drawableLeft="@mipmap/time"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Time"
                />


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />

        <!--//age of babay-->
      <!--  <LinearLayout
            android:id="@+id/ll_q26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_q26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crf4a_q26_english"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/crf4a_q26_roman_urdu"
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>


            <TextView

                android:id="@+id/tv_babyDays"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Days"
                />


        </LinearLayout>


        <EditText
            android:id="@+id/et_BabyName"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="ENTER BABY NAME"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />
-->
        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_next"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/ll_tem"
            android:drawablePadding="-50dp"
            android:textColor="@color/white"
            android:drawableRight="@mipmap/ic_navigate_next_white_48dp"
            android:text="Next"
            android:background="@drawable/button_shape_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</ScrollView>